fixed schedule card line spacing

--- a/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
+++ b/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
@@ -84,7 +84,7 @@
       letter-spacing: 1px;
       text-transform: uppercase;
       margin-top: 0;
-      margin-bottom: 24px;
+      margin-bottom: 16px;
       margin-right: 150px;
     }
 
